Fixed rate align

--- a/src/styles/post-card.less
+++ b/src/styles/post-card.less
@@ -50,6 +50,7 @@
   position: absolute;
   top: 40px;
   right: 40px;
+  text-align: right;
 }
 
 .post-card__tags {
