--- a/src/styles/rate.less
+++ b/src/styles/rate.less
@@ -9,7 +9,6 @@
   font-size: 10px;
   text-transform: uppercase;
   opacity: 0.6;
-  text-align: right;
 }
 
 .rate__degree {
